<resources>
    <string name="app_name">ANDARIEGOS</string>
    <string name="santurban">Paramo de Santurban</string>
    <string name="descripcion">El Páramo de Santurbán se ubica en los departamentos de Santander y Norte de Santander en una altura desde los 2.800 y hasta los 4.290 metros sobre el nivel del mar. El Páramo de Santurbán es hábitat de 457 especies de plantas, 17 de anfibios, 17 de reptiles, 201 de aves y 58 de mamíferos. Si te gusta la fotografía encontrarás paisajes dignos de postales y si disfrutas el ecoturismo estar rodeado de tanta naturaleza mientras el frío rosa tu piel te dejará fascinado.</string>
    <string name="caracteristicas"> Temperatura: 0°c hasta 32°c <br />
                                    Sitios recomendados: Los mayores atractivos de turismo en el Páramo Santurbán son sus Lagunas.
    </string>
    <string name="sitiosdeinteres">Sitios de Interes</string>
    <string name="descripcioncorta">Esta es la descripcion corta</string>
    <string name="puntuacion">Puntuación: 8.7/10</string>
    <string name="retornar">retornar</string>
    <string name="laguna_del_otun">lagunaotun</string>
    <string name="ubicacion_laguna">ubicacionlaguna</string>
    <string name="informacion_lagua_otun">informacionlaguna</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notificaciones</string>
    <string name="check_box_notifications">Notificaciones</string>
    <string name="check_box_sound_notifications">Sonido de notificaciones</string>
    <string name="menu_ajustes">Ajustes</string>
    <string name="ajustes">Ajustes</string>

</resources>